--- a/code/csCore/pyproject.toml
+++ b/code/csCore/pyproject.toml
@@ -9,6 +9,8 @@ python = "^3.10"
 attrs = "^21.4.0"
 pendulum = "^2.1.2"
 orjson = "^3.7.2"
+requests = "^2.28.0"
+beautifulsoup4 = "^4.11.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
