--- a/code/csCore/pyproject.toml
+++ b/code/csCore/pyproject.toml
@@ -11,6 +11,8 @@ pendulum = "^2.1.2"
 orjson = "^3.7.2"
 requests = "^2.28.0"
 beautifulsoup4 = "^4.11.1"
+dnspython = "^2.2.1"
+pymongo = "^4.1.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
